--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,6 @@
 
 image:
-  file: .gitpod.Dockerfile
+  file: .devcontainer/Dockerfile
 tasks:
   - init: pip install --upgrade pip && pip install -r ./requirements.txt
 vscode:
