--- a/requirements.txt
+++ b/requirements.txt
@@ -4,34 +4,41 @@ Brotli==1.0.9
 cachetools==4.2.4
 clang==5.0
 click==8.0.3
-cycler==0.10.0
+configparser==5.0.2
 dash==2.0.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
+docker-pycreds==0.4.0
 Flask==2.0.2
 Flask-Compress==1.10.1
 flatbuffers==1.12
 gast==0.4.0
+gitdb==4.0.7
+GitPython==3.1.24
 google-auth==2.3.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.41.0
 h5py==3.1.0
 itsdangerous==2.0.1
+Jinja2==3.0.2
 joblib==1.1.0
 keras==2.6.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.2
 Markdown==3.3.4
+MarkupSafe==2.0.1
 matplotlib==3.4.3
 numpy==1.19.5
 oauthlib==3.1.1
 opt-einsum==3.3.0
 pandas==1.3.3
+pathtools==0.1.2
 patsy==0.5.2
 Pillow==8.4.0
 plotly==5.3.1
+promise==2.3
 protobuf==3.18.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -41,8 +48,11 @@ rsa==4.7.2
 scikit-learn==1.0
 scipy==1.7.1
 seaborn==0.11.2
-six==1.15.0
+sentry-sdk==1.4.3
+shortuuid==1.0.1
+smmap==4.0.0
 statsmodels==0.13.0
+subprocess32==3.5.4
 tenacity==8.0.1
 tensorboard==2.7.0
 tensorboard-data-server==0.6.1
@@ -51,5 +61,6 @@ tensorflow==2.6.0
 tensorflow-estimator==2.6.0
 termcolor==1.1.0
 threadpoolctl==3.0.0
-typing-extensions==3.7.4.3
+wandb==0.12.4
 Werkzeug==2.0.2
+yaspin==2.1.0
